fixed footer margin spacings

--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,8 @@
   color: white;
   list-style: none;
   text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 .footer__link:hover {
@@ -14,7 +16,6 @@
 
 @media screen and (max-width: 767px) {
   .footer__link {
-    margin: 0 0 32px;
     font-size: 24px;
     line-height: 1;
   }
