--- a/blocks/footer/__listing/footer__listing.css
+++ b/blocks/footer/__listing/footer__listing.css
@@ -6,4 +6,10 @@
   .footer__listing {
     margin: 0 0 32px;
   }
+
+  .footer__listing:last-of-type {
+    margin: 0;
+    font-size: 24px;
+    line-height: 1;
+  }
 }
