--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,7 @@
   max-width: 1184px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1280px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .footer {
     max-width: 928px;
   }
@@ -22,6 +22,6 @@
   .footer {
     flex-direction: column;
     padding-left: 16px;
-    margin: 0 0 24px;
+    margin: 0 0 48px;
   }
 }
